Add namespace support and ignore .DS_Store

--- a/helm/logsearch/values.yaml
+++ b/helm/logsearch/values.yaml
@@ -1,5 +1,9 @@
 replicaCount: 1
 
+namespace:
+  name: "logsearch"
+  create: true
+
 image:
   repository: vkramkumar/opensearch-logsearch
   tag: v1
