--- a/helm/logsearch/templates/admin-secret.yaml
+++ b/helm/logsearch/templates/admin-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.admin.secretName }}
+  namespace: {{ .Values.namespace.name | quote }}
   labels:
     app: {{ include "logsearch.name" . }}
 type: Opaque
