--- a/helm/logsearch/templates/deployment.yaml
+++ b/helm/logsearch/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "logsearch.fullname" . }}
+  namespace: {{ .Values.namespace.name | quote }}
   labels:
     app: {{ include "logsearch.name" . }}
 spec:
