--- a/helm/logsearch/templates/pvc.yaml
+++ b/helm/logsearch/templates/pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ include "logsearch.fullname" . }}-data
+  namespace: {{ .Values.namespace.name | quote }}
   labels:
     app: {{ include "logsearch.name" . }}
   annotations:
