--- a/helm/logsearch/templates/registry-secret.yaml
+++ b/helm/logsearch/templates/registry-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.imagePullSecret.name }}
+  namespace: {{ .Values.namespace.name | quote }}
   labels:
     app: {{ include "logsearch.name" . }}
 type: kubernetes.io/dockerconfigjson
