--- a/helm/logsearch/templates/service.yaml
+++ b/helm/logsearch/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "logsearch.fullname" . }}
+  namespace: {{ .Values.namespace.name | quote }}
   labels:
     app: {{ include "logsearch.name" . }}
 spec:
