--- a/deploy/helm/logsearch/values.yaml
+++ b/deploy/helm/logsearch/values.yaml
@@ -57,16 +57,16 @@ defaultIndexPattern: "mains"
 authTokenTtlMinutes: "10080"
 
 rbac:
-  enabled: false
+  enabled: true
   targetNamespace: "opensearch"
   subjectName: "default"
   subjectNamespace: "default"
   roleName: "logsearch-secret-writer"
   bindingName: "logsearch-secret-writer"
   verbs:
-    - get
-    - list
-    - watch
-    - create
-    - update
-    - patch
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
