Update MOTD placement, help theme sync, and upload UI

--- a/logtool/.env
+++ b/logtool/.env
@@ -37,10 +37,10 @@ LOG_RETENTION_DAYS=7
 
 
 # POC Import settings
-IMPORT_UI_VISIBLE=false   # show/hide Log Import (POC) UI
-IMPORT_ENABLED=false      # enable/disable import processing
+IMPORT_UI_VISIBLE=true   # show/hide Log Import (POC) UI
+IMPORT_ENABLED=true      # enable/disable import processing
 IMPORT_MAX_FILE_BYTES=1gb   # mb or gb only
-IMPORT_BATCH_SIZE=100mb  # mb or gb only
+IMPORT_BATCH_SIZE=10mb  # mb or gb only
 IMPORT_INDEX_RETENTION_ENABLED=true # auto-delete job for import-created indices is ON.
 IMPORT_INDEX_RETENTION_DAYS=7
 
