--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ logtool/proxy/data/access.log
 logtool/proxy/data/health-history.json
 logtool/proxy/data/app-config.json
 logtool/proxy/data/metrics.json
+logtool/proxy/data/error.log
+logtool/proxy/data/users.json
