Add Helm env ConfigMap for import flags

--- a/deploy/helm/logsearch/templates/deployment.yaml
+++ b/deploy/helm/logsearch/templates/deployment.yaml
@@ -99,6 +99,11 @@ spec:
               value: "/app/proxy/data"
             - name: APP_VERSION
               value: {{ .Values.appVersion | default .Values.image.tag | quote }}
+          {{- if .Values.envConfig.enabled }}
+          envFrom:
+            - configMapRef:
+                name: {{ .Values.envConfig.name | quote }}
+          {{- end }}
           resources:
 {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
