--- a/logtool/.env
+++ b/logtool/.env
@@ -39,6 +39,7 @@ LOG_RETENTION_DAYS=7
 # POC Import settings
 IMPORT_UI_VISIBLE=true   # show/hide Log Import (POC) UI
 IMPORT_ENABLED=true      # enable/disable import processing
+IMPORT_AUTO_CREATE_INDEX=true
 IMPORT_MAX_FILE_BYTES=1gb   # mb or gb only
 IMPORT_BATCH_SIZE=10mb  # mb or gb only
 IMPORT_INDEX_RETENTION_ENABLED=true # auto-delete job for import-created indices is ON.
