Use .env via Helm ConfigMap and Secret

--- a/deploy/helm/logsearch/templates/env-secret.yaml
+++ b/deploy/helm/logsearch/templates/env-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.envConfig.enabled }}
+{{- if .Values.envSecrets.enabled }}
 {{- $raw := .Files.Get .Values.envConfig.envFile | default "" }}
 {{- $lines := splitList "\n" $raw }}
 {{- $secretKeys := dict }}
@@ -6,13 +6,14 @@
 {{- $_ := set $secretKeys (upper $k) true }}
 {{- end }}
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: {{ .Values.envConfig.name | quote }}
+  name: {{ .Values.envSecrets.name | quote }}
   namespace: {{ .Values.namespace.name | quote }}
   labels:
     app: {{ include "logsearch.name" . }}
-data:
+type: Opaque
+stringData:
   {{- range $line := $lines }}
   {{- $trim := trim $line }}
   {{- if and $trim (not (hasPrefix $trim "#")) (contains "=" $trim) }}
@@ -21,7 +22,7 @@ data:
   {{- $valRaw := trim (join "=" (slice $parts 1)) }}
   {{- $valParts := splitList "#" $valRaw }}
   {{- $val := trim (index $valParts 0) }}
-  {{- if and $key (not (hasKey $secretKeys (upper $key))) }}
+  {{- if and $key (hasKey $secretKeys (upper $key)) }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
   {{- end }}
