--- a/deploy/helm/logsearch/templates/deployment.yaml
+++ b/deploy/helm/logsearch/templates/deployment.yaml
@@ -49,52 +49,6 @@ spec:
             timeoutSeconds: 3
             failureThreshold: 3
           env:
-            - name: OPENSEARCH_HOST
-              value: {{ .Values.opensearch.host | quote }}
-            - name: OPENSEARCH_PORT
-              value: {{ .Values.opensearch.port | quote }}
-            - name: OPENSEARCH_SCHEME
-              value: {{ .Values.opensearch.scheme | quote }}
-            - name: OPENSEARCH_INSECURE_SSL
-              value: {{ .Values.opensearch.insecureSSL | quote }}
-            {{- if .Values.opensearch.useSecret }}
-            - name: OPENSEARCH_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.opensearch.secretName }}
-                  key: OPENSEARCH_USERNAME
-            - name: OPENSEARCH_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.opensearch.secretName }}
-                  key: OPENSEARCH_PASSWORD
-            {{- else }}
-            - name: OPENSEARCH_USERNAME
-              value: {{ .Values.opensearch.username | quote }}
-            - name: OPENSEARCH_PASSWORD
-              value: {{ .Values.opensearch.password | quote }}
-            {{- end }}
-            - name: DEFAULT_INDEX_PATTERN
-              value: {{ .Values.defaultIndexPattern | quote }}
-            - name: AUTH_TOKEN_TTL_MINUTES
-              value: {{ .Values.authTokenTtlMinutes | quote }}
-            {{- if .Values.admin.useSecret }}
-            - name: ADMIN_USER
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.admin.secretName }}
-                  key: ADMIN_USER
-            - name: ADMIN_PASS
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.admin.secretName }}
-                  key: ADMIN_PASS
-            {{- else }}
-            - name: ADMIN_USER
-              value: {{ .Values.admin.user | quote }}
-            - name: ADMIN_PASS
-              value: {{ .Values.admin.pass | quote }}
-            {{- end }}
             - name: DATA_DIR
               value: "/app/proxy/data"
             - name: APP_VERSION
@@ -103,6 +57,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ .Values.envConfig.name | quote }}
+            {{- if .Values.envSecrets.enabled }}
+            - secretRef:
+                name: {{ .Values.envSecrets.name | quote }}
+            {{- end }}
           {{- end }}
           resources:
 {{- toYaml .Values.resources | nindent 12 }}
