Add remember-me, search tips fix, and parser detection

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ logtool/proxy/data/app-config.json
 logtool/proxy/data/metrics.json
 logtool/proxy/data/error.log
 logtool/proxy/data/users.json
+logtool/proxy/data/field-glossary.json
